fix: nowrap for "About us" names, margin, paddings and letter-spacing

--- a/style2.css
+++ b/style2.css
@@ -169,7 +169,7 @@ h2 {
 }
 
 p {
-  padding-top: 18px;
+  padding-top: 17px;
 
   font-size: 18px;
   font-weight: 200;
@@ -194,7 +194,7 @@ article {
 
   background-repeat: no-repeat;
   background-size: 59px;
-  background-position: 1.1px 4px;
+  background-position: 1.1px 5px;
 }
 
 h3 {
@@ -261,9 +261,17 @@ article:nth-of-type(3n) h3 {
 }
 
 .portfolio .wrapper {
-  padding: 63px 40px 0px 40px;
+  padding: 62px 40px 0px 40px;
 
   color: #666d89;
+}
+
+.portfolio h2 {
+  letter-spacing: 0.3px;
+}
+
+.portfolio > p {
+  letter-spacing: -0.21px;
 }
 
 .portfolio ul {
@@ -271,17 +279,17 @@ article:nth-of-type(3n) h3 {
   padding: 0px;
 
   font-size: 12px;
-  font-weight: 600;
+  font-weight: 400;
   color: #e8b8b5;
   list-style: none;
   letter-spacing: -0.230px;
 }
 
 .portfolio li {
-  margin-top: 7px;
+  margin-top: 9px;
   margin-right: 9px;
   margin-left: 1px;
-  padding: 3px 7px;
+  padding: 3px 7.3px;
 
   text-align: center;
   letter-spacing: -0.31px;
@@ -324,11 +332,13 @@ article:nth-of-type(3n) h3 {
 }
 
 .gallery img {
-  margin-top: 19px;
+  width: 220px;
+  height: 187px;
+  margin-top: 20px;
 }
 
 .gallery img:nth-of-type(-n+4) {
-  margin-top: 18px;
+  margin-top: 19px;
 }
 
 .about {
@@ -336,15 +346,20 @@ article:nth-of-type(3n) h3 {
   height: 728px;
 
   color: #666d89;
+  white-space: nowrap;
 
   background-color: rgb(242, 242, 242);
   border-bottom: 6px solid white;
 }
 
+.about h2 {
+  letter-spacing: -0.1px;
+}
+
 .card {
   display: flex;
   width: 300px;
-  margin-top: 42px;
+  margin-top: 43px;
 
   text-align: justify;
   flex-direction: column;
